--- a/src/components/Share.css
+++ b/src/components/Share.css
@@ -1,15 +1,13 @@
+
 .search {
-    min-width: 10rem;
-    width: 30rem;
-    /* height: 20rem; */
-    margin: 1rem;
     padding: 1rem;
+    max-width: 600px;
 }
 
 .searchContainer{
     display: flex;
-    justify-content: space-evenly;
-
+    justify-content: space-between;
+    width: 100%;
 }
 
 #invite {
